# mini-pygame-collection

./: README.md  bug_squash.py  game_opener.py  main.py  pyproject.toml  test.py
Games/: Archaeology.py  Balance.py  ColourNames.py  Colour_names.py  Game 1.py  Maze.py  bug_squash.py  button game  button game.py  button_game.py  circle.py  flood.py  higher or lower.py  higher_or_lower.py
